# JCode

./: .gitignore  AGENTS.md  LICENSE  README.md  configure_vscode.py  install-global.ps1  install.bat  install.py  install.sh  jcode_start.py  package-lock.json  pyproject.toml  requairment.txt  requirements.txt  test-opencode.json  uninstall.py
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-health-check.txt  task-10-no-agent-manager.txt  task-3-tools-list.txt  task-4-analyst.txt  task-5-planner.txt  task-6-implementer.txt  task_6_implementer_wiring.md
.sisyphus/guides/: fix-mcp-connection-error.md  fix-opencode-config.md
.sisyphus/notepads/: jcode_mcp_fix_indentation.md
.sisyphus/notepads/jcode-independent-agents/: learnings.md
.sisyphus/notepads/jcode-update-descr/: learnings.md
.sisyphus/notepads/jcode-v3-implementation/: learnings.md
.sisyphus/notepads/plan-oi/: learnings.md
.sisyphus/plans/: agent-implementation.md  jcode-independent-agents.md  jcode-switch-design.md  jcode-v3-implementation.md  jcode-v3-omo-extension.md
agents/: AGENTS.md  analyst.md
api/: __init__.py  main.py
api/models/: __init__.py
api/routes/: __init__.py  agents.py  config.py
cli/: commands.py  config.py
config/: jcode_config.yaml
config/agents/: jcode-analyst.md  jcode-conductor.md  jcode-implementer.installed.md  jcode-implementer.md  jcode-planner.md  jcode-reviewer.md  jcode-tester.installed.md  jcode-.md  jcode.md
core/: agent_manager.py  audit_logger.py  base_agent.py  context_lock.py  incremental_build.py  llm_client.py  mcp_client.py  rule_engine.py  switch_manager.py
core/agents/: __init__.py  analyst.py  conductor.py  implementer.py  planner.py  reviewer.py  tester.py
core/tools/: __init__.py  command_tools.py  file_tools.py  git_tools.py
docs/: AUTO_START_GUIDE.md  GLOBAL_SETUP.md  INSTALLATION.md  OMO_INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  VSCODE_INTEGRATION.md  WORKFLOW_USAGE.md
governance/: AGENTS.md  AGENT_CONSTITUTION.md  AUDIT_LOG_SPEC.md  CONTEXT_LOCK.md  EDGE_CASES.md  HUMAN_INTERFACE.md  INCREMENTAL_BUILD.md  JCODE_SWITCH.md  OMO_INTEGRATION.md  OUTPUT_FORMAT_GUIDELINES.md  QUICK_FIX_CHANNEL.md  RULE_ENGINE.md  SUPERPOWERS_EXTENSION.md
jcode/: __init__.py  cli.py
jcode_mcp/: server.py
mcp/: __init__.py  jcode_server.py  server.py
skills/jcode-mcp/: SKILL.md
tests/: __init__.py  test_agent_manager.py  test_api.py  test_audit_logger.py  test_rule_engine.py  test_switch_manager.py
tests/integration/: __init__.py  test_mcp_server.py
tools/: rename_tools.py
workflows/: jcode-pipeline.yaml
(+4 files in other folders)
