[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jcode"
version = "0.1.0"
description = "JCode Agent System - OpenCode Governance Extension Layer"
authors = ["JCode Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/jcode"
repository = "https://github.com/your-org/jcode"
keywords = ["opencode", "agent", "governance", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
pyyaml = "^6.0.0"
click = "^8.1.0"
typer = "^0.12.0"
python-multipart = "^0.0.5"
aiofiles = "^23.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
loguru = "^0.7.0"
tenacity = "^8.2.0"
toml = "^0.10.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.5.0"

[project]
name = "jcode"
version = "0.1.0"
description = "JCode Agent System - OpenCode Governance Extension Layer"
authors = [
    {name = "JCode Team"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "typer>=0.12.0",
    "python-multipart>=0.0.5",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
jcode = "jcode.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_subclass_typing = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["uvicorn.*", "fastapi.*", "pydantic.*"]

